--- a/configuration.properties
+++ b/configuration.properties
@@ -3,7 +3,12 @@
 browser= chrome
 
 facebookUrl= https://www.facebook.com
-webuniversityUrl=http://www.webdriveruniversity.com/IFrame/index.html
+webUniUrl=http://www.webdriveruniversity.com/
+sauceUrl= https://www.saucedemo.com/
+heroUrl = https://the-internet.herokuapp.com/add_remove_elements/
+editorUrl = https://editor.datatables.net/
+exerciseUrl=https://automationexercise.com/
+
 
 toUrl=https://www.testotomasyonu.com
 toGecerliEmail= cem@gmail.com
@@ -19,5 +24,12 @@ qdGecerliPassword = Nevzat152032
 qdGecersizEmail = abcd@gmail.com
 qdGecersizPassword = 12345
 
-
+toGecersizEmail2 = fgdjd@gmail.com
+toGecersizPassword2 = 34322
+toGecersizEmail3 = ali@gmail.com
+toGecersizPassword3 = aliAslan
+toGecersizEmail4 = yasar@gmail.com
+toGecersizPassword4 = yasar123
+toGecersizEmail5 = arda@gmail.com
+toGecersizPassword5 = arda765
 
